# notes

./: .gitignore  2015-10-11-space-book.md  README.md  example.py  random.md  vim.md
ai/: friend.md
angular/: notes.txt  tsconfig.old
arch/: changelog.md  install_log.md  keyboard.md  monitors.md  network.md
bash/: clone.bash  python.bash  randfile.bash  sed.md  tmux.hg
blog/: 2017-04-03-intentional-spirituality.md
c/: a.out  block  block.c  exec.c  fngipack.c  int.c  justPrint.c  packTest.c  pollsemfd.c  pollsocket.c  pollthread  pollthread.c  pre_hash.c  readlines.c  stdout.c  stdout.py  tmpfile  tmpfile.c
civboot/: README.md  starciv.md
compression/: nutz.py
cpp/: README.md  a.out  play.cpp  yminutes.cpp
cracking-code/: all_sorts.py  ch1-arrays-strings.py  ch1.py  ch10-math-probability.py  ch11-testing.py  ch12.md  ch17-networking.md  ch18-threading.py  ch2.py  ch3.py  ch4.py  ch5.py  ch6-brain-teasers.py  ch7-oo-design.md  ch7.md  ch8-recursion.py  ch8.py  ch9-algorithms.py  further-questions.md  notes.md
cranelift/: notes.md
cython/: tutorial1.ipynb
docker/: Dockerfile
embedded/: upython.md
forth/: .gitignore  Makefile  README.md  TypeForth.S  assert.fs  basic.fs  blocks.forth  cheatsheet.fs  cradle.fs  hello.fs  jonesforth.S  jonesforth.fs  jonesforth.md  my.forth  my.fs  myfun.f  style-conventions.md  typeforth
fpga/: README.md
go/: go  hello.go
haskell/ch3/: .gitignore  Ch3.hs  TestCh3.hs  ch3.cabal
haskell/ch4/: Ch4.hs  TestCh4.hs  ch4.cabal
rust/2017-11-28/test_failure/: Cargo.toml
rust/2017-11-28/test_failure/src/: lib.rs
(+720 files in other folders)
