cabal-version: 1.12

name:           ch4
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
      Ch4
  hs-source-dirs:
      ./
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

test-suite ch4-test
  type: exitcode-stdio-1.0
  main-is: TestCh4.hs
  hs-source-dirs:
      ./
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , ch4
    , tasty
    , tasty-hunit
  default-language: Haskell2010
